<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">UN AID HUB</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="live">Live News</string>
    <string name="sign_up">Home</string>

    <string name="select_cont">Thousands march on Washington to demand ceasefire in Gaza</string>
    <string name="select_cont2">Journalist Motaz Azaiza reveals receiving offers to stop documenting war on Gaza.</string>
    <string name="select_cont3">Sudan conflict displaces hundreds of thousands,urgent need for safety. </string>
    <string name="select_cont4">Bank of Palestine launches "Palestine in our hearts campaign" for those affected by recent aggression.</string>
    <string name="select_cont5">Gaza Tower hit by missile attack near journalists during live news report.</string>


    <string name="home">Home</string>
    <string name="services">Services</string>
    <string name="donation_services">Donation Services</string>

    <string name="donations">Donations</string>

    <string name="my_account">My Account</string>

    <string name="notification">Notification</string>


    <string name="UN">United Nations (UN)</string>

    <string name="bot_chat">Chat Bot</string>

    <string name="live_chat">Live Chat</string>

    <string name="location">Location</string>

    <string name="search">search</string>

    <string name="service1">Blood Donation Service</string>
    <string name="service2">Water Relief Service</string>
    <string name="service3">Food Aid Service</string>
    <string name="service4">Medical Supplies Assistance</string>
    <string name="service5">Emergency Shelter Aid</string>


    <string name="Org1">Office of United Nations for High Commissioner for Human Rights(OHCHR)</string>
    <string name="Org2">United Nations Office for the Coordination of Humanitarian Affairs (OCHA)</string>
    <string name="Org3">World Food Programme (WFP)</string>
    <string name="Org4">World Health Organization(WHO)</string>
    <string name="Org5">United Nations High Commissioner for Refugees (UNHCR)</string>


    <string name="chat_msg_user1">Hi there!I am interested in making a donation through this app can you guide me.</string>
    <string name="chat_msg_user2">I am thinking of making a one-time donation for now.How can i go about?</string>


    <string name="chat_msg_contact1">Hello Absolutely I would be happy to help, can you specify the type of donation e.g one time,monthly etc.</string>
    <string name="chat_msg_contact2">Great! To make one time donation simply click the "Donate now" button on the app donation page</string>

    <string name="ali_online_status">Ali 10:50pm</string>
    <string name="bot_online_status">Bot 10:50pm</string>
    <string name="bilal_online_status">Bilal 10:50pm</string>


    <string name="Today">Today 14-jan-2024</string>

    <string name="chatsupport">Chat with our support team</string>

    <string name="Help">How can we help you?</string>

    <string name="supportdesc">Our support team is 24/7 available to address any of your questions you may have about our service, ensuring a smooth experience throughout the entire process. </string>

    <string name="btn_Heading_1">Contact with Bot Chat</string>
    <string name="btn_Heading_2">Contact with Live Chat</string>
    <string name="btn_Heading_3">Request Send</string>
    <string name="btn_heading_4">Donate Now</string>


    <string name="notification_opt1">Select Organization</string>
    <string name="notification_opt2">Select Blood Type</string>
    <string name="notification_opt3">Type Quantity</string>
    <string name="notification_opt4">Select Food Type</string>
    <string name="notification_opt5">Select Medical Supplies</string>
    <string name="notification_opt6">Type Other Supplies(Optional)</string>
    <string name="notification_opt7">Select Location</string>
    <string name="notification_opt8">Select Type</string>
    <string name="notification_opt9">Amount</string>


    <string name="donate_heading1">Donate Now!</string>
    <string name="donate_heading2">Donation Done!</string>

    <string name="signintext">Sign in</string>
    <string name="signuptext">Sign up</string>

    <string name="profile_setup_user">User</string>
    <string name="profile_setup_org">Organization</string>

    <string name="my_account_header">My Account</string>
    <string name="general_header">General</string>
    <string name="option1_text">Edit Profile</string>
    <string name="option2_text">Change Password</string>
    <string name="option3_text">Notifications</string>
    <string name="option4_text">Security</string>
    <string name="option5_text">Language</string>
    <string name="preferences_header">Preferences</string>
    <string name="option6_text">Legal Policies</string>
    <string name="option7_text">Help and support</string>
    <string name="option8_text">Logout</string>

    <string name="confirm_logout">Are you sure you want to logout?</string>


    <string name="or">"_____________________ OR ______________________"</string>
    <string name="Terms">By continuing,you agree to the <u>Terms of Service</u> and acknowledge our <u>Privacy Policy</u></string>
    <string name="Signup">Dont have an account? <u>Sign Up.</u></string>
    <string name="SignIn1">Already have an account? <u>Sign In.</u></string>

    <string name="SignIn2">Then lets submit Password reset.</string>
    <string name="SignIn3"><b>Send via Email</b></string>
    <string name="Resetviaemail"> <b>Send via 2FA</b></string>
    <string name="Google"> <b>Send via Google Auth</b></string>
    <string name="sms"> <b>Send via SMS</b></string>

    <string name="continue1">Continue</string>
    <string name="continue2">Continue with Google</string>
    <string name="continue3">Create Account</string>


    <string name="welcome_header1">Welcome to UN AID HUB </string>
    <string name="signmsg">Already have an account? Sign in. </string>
    <string name="btn_text1">Get Started </string>
    <string name="skip">Skip</string>
    <string name="welcome_msg_1">Connect for global good and join hands in humanitarian unity.</string>

    <string name="welcome_header2">Where Every Effort Matters </string>
    <string name="welcome_msg_2">In our community every effort matters,contributing to meaningful change and progress.</string>

    <string name="welcome_header3">Aid Chatbot for All </string>
    <string name="welcome_msg_3">Experience connect you to resources, and support your efforts for a positive global impact.</string>


</resources>