<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/bg_view"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:textSize="30dp"
        android:textStyle="bold"
       android:layout_marginLeft="30dp"
        android:layout_marginTop="130dp"/>

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vector_stroke"
        android:padding="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/darkblue"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="180dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/SignIn2"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="@string/SignIn3"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/email"
        android:drawableRight="@drawable/solid_chevron_right_md"
        android:textSize="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:padding="20dp"
        />


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/Resetviaemail"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/monotone_gender_male"
        android:drawableRight="@drawable/solid_chevron_right_md"
        android:textSize="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:padding="20dp"
        />


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:text="@string/Google"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/monotone_add3"
        android:drawableRight="@drawable/solid_chevron_right_md"
        android:textSize="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:padding="20dp"
        />


    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/sms"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/baseline_ad_units_24"
        android:drawableRight="@drawable/solid_chevron_right_md"
        android:textSize="20dp"
        android:background="@drawable/rounded_corner"
        android:layout_marginHorizontal="20dp"
        android:textAllCaps="false"
        android:padding="20dp"
        />

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:text="Reset Password"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginHorizontal="20dp"
        android:drawableRight="@drawable/monotone_gender_male"
        android:background="@drawable/round_button"
        android:padding="15dp"
        />


</RelativeLayout>
