<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/frame">

    <View
        android:id="@+id/welcome_screen_progress"
        android:layout_width="217dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="176dp"
        android:background="@drawable/progress_bar" />

    <TextView
        android:id="@+id/skip_text"
        android:layout_width="46.6dp"
        android:layout_height="30.6dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="679dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/personalize_your_health_with_intelligent_ai"
        android:layout_width="365dp"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="596dp"

        android:text="@string/welcome_header1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/__p__achieve_your_wellness_goals_with_our_ai_powered_platform_to_your_unique_needs"
        android:layout_width="356.6dp"
        android:layout_height="63.6dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="521dp"
        android:text="@string/welcome_msg_1"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/vector"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="128dp"
        android:alpha="0.80000001192093"
        android:contentDescription="vector"
        android:src="@drawable/welcomeimg1" />

    <View
        android:id="@+id/next_btn_welcome2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_primary" />


</RelativeLayout>